# Include example directory in installation
#
# "nobase" says don't strip "simple/" prefix when installing
#
examplesdir = $(prefix)/examples
nobase_examples_DATA= \
 simple/bio.tai          \
 simple/locations        \
 simple/Net3.imperfectjc  \
 simple/Net3.inp  \
 simple/ug_impacts\
 simple/getting_started  \
 simple/Net3_ec.sensors  \
 simple/Net3.imperfectsc   \
 simple/Net3.tsg  \
 simple/ug_solvers
